# example_bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/chatbot/: __main__.py  bot_connection_instance.py  config.py  log_config.py  utils.py
src/chatbot/chuck_norris_bot/: __init__.py  jokes.py
src/chatbot/core/: __init__.py  bot_connection_instance.py  models.py  utils.py
