[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatbot"
version = "0.0.1"
description = "IRC Quiz Bot"
readme = "README.md"
requires-python = ">=3.12.4"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pydantic-settings>=2.7.1,<3",
  "pydantic>=2.10.4,<3",
  "aiohttp>=3.11.11,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9",
  "black>=24.10.0,<25",
  "isort>=5.13.2,<6",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/chatbot",
]

[project.scripts]
chatbot = "chatbot.__main__:main"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = ["--import-mode=importlib"]

[tool.black]
line-length = 119
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
